# co-log-learn

./: .gitignore  LICENSE  README.md  co-log-learn.cabal  stack.yaml
src/app/: Main.hs
src/lib/CologLearn/: Trans.hs
