cabal-version: 2.2

name: co-log-learn
version: 1.0
-- synopsis:
-- description:
author: Dino Morelli
maintainer: dino.morelli@iohk.io
copyright: 2022 Dino Morelli
category: Unclassified
license: ISC
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  .gitignore
  README.md
  stack.yaml

source-repository head
  type: git
  location: https://github.com/dino-iog/co-log-learn

common lang
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

library
  import: lang
  exposed-modules:
      Example
  -- other-modules:
  --     Paths_fixme
  hs-source-dirs:
    src/lib
  build-depends:
      base >=3 && <5

executable co-log-learn
  import: lang
  main-is: Main.hs
  -- other-modules:
  --     Paths_fixme
  hs-source-dirs:
    src/app
  build-depends:
      base >=3 && <5
    , co-log-learn

test-suite basic-wrk-test-suite
  import: lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  -- other-modules:
  --     Paths_fixme
  hs-source-dirs:
    src/test
  ghc-options: -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base >=3 && <5
    , co-log-learn
    , tasty
    , tasty-hunit
    , tasty-quickcheck
