cabal-version: 2.2

name: co-log-learn
version: 1.0
synopsis: Learning the co-log libraries
description: A project to explore the co-log libraries and learn how they work.
  Work may be done here on helper modules for co-log as well.
author: Dino Morelli
maintainer: dino@ui3.info
copyright: 2022 Dino Morelli
category: Unclassified
license: ISC
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  .gitignore
  README.md
  stack.yaml

source-repository head
  type: git
  location: https://github.com/dino-/co-log-learn

common lang
  default-language: Haskell2010
  default-extensions:
    InstanceSigs
    OverloadedStrings
    PatternSynonyms
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

library
  import: lang
  exposed-modules:
      CologLearn.Trans
  -- other-modules:
  --     Paths_fixme
  hs-source-dirs:
    src/lib
  build-depends:
      base >=3 && <5
    , co-log
    , co-log-core
    , mtl

executable co-log-learn
  import: lang
  main-is: Main.hs
  -- other-modules:
  --     Paths_fixme
  hs-source-dirs:
    src/app
  build-depends:
      base >=3 && <5
    , co-log
    , co-log-core
    , co-log-learn
    , text

test-suite basic-wrk-test-suite
  import: lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  -- other-modules:
  --     Paths_fixme
  hs-source-dirs:
    src/test
  ghc-options: -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base >=3 && <5
    , co-log-learn
    , tasty
    , tasty-hunit
    , tasty-quickcheck
